<resources>
    <string name="app_name">Catatan\nToko</string>
    <string name="version">V1.3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nama_toko">CaTok (Catatan Toko)</string>
    <string name="data_produk">Data Produk</string>
    <string name="data_produk2">Data Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="transaksi_produk">Transaksi Produk</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="beranda">Beranda</string>
...
    <string name="lunas">LUNAS</string>
    <string name="belum_ada_data2">Belum ada data.</string>
    <string name="status_bayar_args">(%1$s)</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="edit_nama_toko">Edit Nama Toko</string>
    <string name="ok">OK</string>
    <string name="izin_penyimpanan"><b>Backup &amp; Restore Perlu Izin Penyimpanan</b></string>
    <string name="izinkan"><b>Izinkan</b></string>
    <string name="produk_dibeli_arg">: %1$s</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="status_bayar">Status Bayar</string>
    <string name="detail_transaksi_arg">%1$s</string>
...
    <string name="backup_folder">/BackupCatok</string>
    <string name="data_berhasil_direstore">Data berhasil direstore…</string>
    <string name="restoreMsgAneh2">it must not be null</string>
    <string name="restoreMsgAneh1">length</string>
    <string name="restoreMsgAneh3">For input</string>
    <string name="backup_warning">Tambah data produk / lakukan transaksi terlebih dahulu..</string>
    <string name="press_twice_to_backup">Klik 1x lagi untuk backup data..</string>
    <string name="nama_file_foto">Logo Toko.png</string>
    <string name="comma">,</string>
    <string name="minusOne">-1</string>
    <string name="selamat_datang">Selamat Datang\ndi aplikasi CaTok</string>
    <string name="text_onboarding">Aplikasi CaTok (Catatan Toko) ini hadir untuk mempermudah pemilik toko dalam mengelola data produk, transaksi, serta monitoring penjualan toko berdasarkan grafik.</string>
    <string name="izin_ditolak">Izin ditolak…</string>
...
