...
                        android:gravity="center|bottom"
                        android:textColor="@color/orange" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editNama"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/ic_edit_name"
...
                android:text="@string/alert_backup"/>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backupData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_3sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
...

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/restoreData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_3sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
...
