...
        app:hintTextColor="@color/orange"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaToko"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:textColor="@color/orange"
            style="@style/RegularTextStyle"
            android:textSize="@dimen/_13ssp"
            android:inputType="text"
...
